# openecg

./: .gitignore  README.md  pyproject.toml
data/splits/: ludb_v1.json
docs/superpowers/plans/: 2026-05-03-ecgcode-stage1.md  2026-05-03-ecgcode-stage2.md  2026-05-06-v12-ssl-boundary.md
docs/superpowers/specs/: 2026-05-03-ecgcode-stage1-design.md  2026-05-03-ecgcode-stage2-design.md  2026-05-06-v12-postmortem.md  2026-05-06-v12-ssl-boundary-design.md
ecgcode/: codec.py  delineate.py  eval.py  isp.py  labeler.py  ludb.py  pacer.py  qtdb.py  vocab.py
ecgcode/stage2/: __init__.py  augment.py  dataset.py  evaluate.py  infer.py  model.py  multi_dataset.py  refiner.py  reg_targets.py  soft_labels.py  train.py
ecgcode/stage2/ssl/: head.py  hubert.py  stmem.py
openecg/: __init__.py  afib.py  butpdb.py  codec.py  delineate.py  dsp.py  eval.py  isp.py  labeler.py  ludb.py  mitdb.py  pacer.py  ptbxl.py  qrs.py  qtdb.py  synth.py  vocab.py
openecg/stage2/: __init__.py  augment.py  dataset.py  infer.py  model.py  multi_dataset.py  qrs_channel.py  reg_targets.py  soft_labels.py  synth_dataset.py  train.py
openecg/stage2/ssl/: __init__.py  hubert.py  stmem.py
scripts/: ablate_methods.py  ablate_v12_reg_offset.py  ablate_v3_regression.py  ablate_v4_candidate.py  afib_adaptive_veto_v7.py  afib_combined_v6.py  afib_deadband_sweep.py  afib_fn_review.py  afib_high_spec_union.py  afib_label_review.py  afib_qrs_width_v3.py  afib_qrs_width_v4.py  afib_rule_errors.py  afib_rule_features.py  afib_short_window_v8.py  afib_width_masking_v5.py  baseline_comparison.py  build_lydus_duckdb.py  check_isp_alignment.py  compare_avb_synth.py  compare_v12.py  diagnose_isp_labels.py  diagnose_v3.py  eval_qtdb_t_annotated.py  eval_refiner.py  fix_p_off_bias.py  per_lead_v4.py  qtdb_fullrecord_comparison.py  qtdb_multi_annotator_comparison.py  redo_v3_after_isp_fix.py  retrain_v12_reg_after_qtdb_fix.py  retrain_v12_reg_with_synth.py  retrain_v13_aux_qrs.py  retrain_v14_paced_synth.py  retrain_v15_concat_paced.py  smoke_v3_dataset.py  sota_comparison.py  tokenize_ludb.py  train_stage2.py  train_stage2_v11.py  (+47 more)
tests/: conftest.py  test_afib.py  test_codec.py  test_dsp.py  test_eval.py  test_integration.py  test_labeler.py  test_pacer.py  test_qrs.py  test_qrs_channel.py  test_qtdb_window.py  test_stage2_augment.py  test_stage2_dataset.py  test_stage2_evaluate.py  test_stage2_infer.py  test_stage2_model.py  test_stage2_refiner.py  test_stage2_reg_targets.py  test_stage2_soft_labels.py  test_stage2_ssl_head.py  test_stage2_ssl_hubert.py  test_stage2_ssl_stmem.py  test_stage2_train.py  test_stage2_train_v12.py  test_vocab.py
