[project]
name = "ecgcode"
version = "0.1.0"
description = "Clinically-grounded discrete tokenization for electrocardiograms"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "neurokit2>=0.2.7",
    "wfdb>=4.1",
    "torch>=2.6",
    "transformers>=4.40",
    "huggingface-hub>=0.20",
]

[dependency-groups]
dev = [
    "pytest>=7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ecgcode"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.uv.sources]
torch = [{ index = "pytorch-cu124", marker = "sys_platform == 'win32' or sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
